# ios-tauri-holochain-reproduction

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
